style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Ropa+Sans&display=swap');

* {
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;
    text-decoration: none;
    caret-color: transparent;
}

html, body {
    height: 100%;
}

.page__container {
    height: 100%;
    width: 100%;
    position: relative;
    background-color: #424874;
    overflow: hidden;
}

#home__rect--1 {
    position: absolute;
    width: 689px;
    height: 572px;
    left: -171px;
    top: -90px;
    background: #B7B5E4;
}

#home__rect--2 {
    position: absolute;
    width: 1384px;
    height: 875px;
    left: 794px;
    top: -146px;
    background: #674EA7;
}

#home__rect--3 {
    position: absolute;
    width: 1037px;
    height: 744px;
    left: 1046px;
    top: 523px;
    background: #514B61;
}

#home__image {
    position: absolute;
    left: 80px;
    bottom: 0;
    max-width: 800px;
    width: 50%;
    min-width: 600px;
}

.home__info__container {
    /* border: 2px red solid; */
    position: absolute;
    left: 50%;
    top: 25%;
    width: 40%;
    height: 45%;
    color: white;
    font-family: 'Inter', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.home__info__project-type {
    /* border: 2px orange solid; */
    font-size: 72px;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 0.75em;
}

.home__info__project-name {
    /* border: 2px orange solid; */
    font-size: 144px;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 0.75em;
}

.home__info__project-info {
    /* border: 2px orange solid; */
    font-size: 24px;
    font-weight: 400;
    /* line-height: 0.75em; */
}


.button {
    cursor: pointer;
    width: 160px;
    height: 36px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 22px;
    text-align: center;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-transform: uppercase;
    font-family: 'Inter', sans-serif;
    font-size: 18px;
    font-weight: 700;
}

.button_stream {
    background-color: #8B69E0;
    /* border: 2px orange solid; */
}

.button a {
    /* border: 2px blue solid; */
    color: white;
}

.button_info {
    background-color: #978BB5;
}

.logo {
    /* border: 2px blue solid; */
    font-family: 'Inter', sans-serif;
    text-transform: uppercase;
    cursor: pointer;
    font-weight: bold;
    font-size: 40px;
    color: white;
    margin: 2vw;
    padding: 5px 10px;
}

.logo a:visited, .logo a:active, .logo a:focus, .logo a:hover, .logo a:visited:hover {
    color: white;
}

.nav__links {
    list-style: none;
    /* border: 2px red solid; */
}

.nav__links li {
    display: inline-block;
    /* border: 2px green solid; */
    padding: 10px 15px;
    margin: 2vw;
    cursor: pointer;
    text-transform: uppercase;
    font-family: 'Ropa Sans', sans-serif;
    color: #FFFFFF;
}

.nav__links a:visited, .nav_links a:active, .nav_links a:focus, .nav_links a:hover, .nav__links a:visited:hover {
    color:white;
    /* background-color: transparent; */
}

.socials__links {
    /* border: 2px blue solid; */
    list-style: none;
    margin-right: 2vw;
    height: 100%;
    width: 100%;
}

.socials__links li {
    /* border: 2px green solid; */
    padding: 3px;
    margin: 0.3vw;
    width: 30px;
    display: inline-block;
    filter: invert(100%) sepia(6%) saturate(4717%) hue-rotate(264deg) brightness(120%) contrast(105%); 
}

.header__container {
    /* border: 2px black solid; */
    height: 10%;
    width: 100%;
    background-color: transparent;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#about__image {
    position: absolute;
    left: 80px;
    top: 13%;
    /* max-width: 700px; */
    width: 30%;
    /* min-width: 600px; */
}

.about__info__container {
    /* border: 2px red solid; */
    position: absolute;
    left: 40%;
    top: 13%;
    width: 53%;
    height: 70%;
    color: white;
    font-family: 'Inter', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 20px;
}

.about__info-name {
    /* border: 2px orange solid; */
    font-size: 80px;
    font-weight: 700;
    line-height: 0.75em;
}

.about__info-titles {
    /* border: 2px orange solid; */
    font-size: 36px;
    font-weight: 700;
    line-height: 0.75em;
}

.about__info-text {
    /* border: 2px orange solid; */
    font-size: 20px;
    font-weight: 500;
    /* line-height: 0.75em; */
}

.contact__container {
    /* border: 2px orange solid; */
    position: absolute;
    left: 0;
    right: 0;
    top: 13%;
    width: 60%;
    height: 70%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    align-items: center;
    font-family: 'Inter', sans-serif;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
}

.contact__title {
    color: white;
    font-size: 72px;
    font-weight: 700;
}

.contact__text {
    color: white;
    font-size: 24px;
    font-weight: 500;
}

.contact__input__div__name-subject {
    /* border: 2px green solid; */
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.button_submit {
    color: white;
    text-transform: uppercase;
    background-color: #37158C;
    font-size: 18px;
    font-weight: 700;
    cursor: pointer;
}

input, textarea {
    font-family: 'Inter', sans-serif;
}

textarea {
    resize: none;
}

#contact__input__name, #contact__input__subject {
    width: 45%;
}

#contact__input__msg {
    height: 150px;
}


input[type=text], input[type=email], textarea {
    /* font-family: 'Inter', sans-serif; */
    border-radius: 11px;
    padding: 10px 15px;
    font-size: 18px;
    width: 100%;
    caret-color: black;
}

.music__container {
    position: absolute;
    /* border: 2px orange solid; */
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    top: 15%;
    width: 80%;
    height: auto;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    padding-bottom: 100px;
}

#music__page__container {
    overflow-y: visible;
    padding-bottom: 50px;
    /* border: 2px black solid; */
}

.music-item {
    /* border: 2px red solid; */
    width: 300px;
    height: 300px;
    margin: auto;
    margin: 30px 30px;
    perspective: 1500px;
}

.music-item-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); */
}

.music-item:hover .music-item-inner {
    /* animation-name: music-item-flip; */
    transform: rotateY(180deg);
}

.music-item-front, .music-item-back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
}

.music-item-back {
    transform: rotateY(180deg);
    /* display: flex;
    flex-direction: column; */
    font-family: 'Inter', sans-serif;

    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    /* display: flex;
    flex-direction: column; */
    /* border: 2px orange solid; */
    /* align-items: center;
    text-align: center; */
    justify-content: space-evenly;
    text-transform: uppercase;
    color: white
}

.music-item-back img { 
    filter: brightness(40%);
}

.music-item-back h1, .music-item-back h2, .single .button, .project .button { 
    left: 0;
    right: 0;
    margin: 0 auto;
}

.music-item-back h2, .single .button, .project .button {
    position: absolute;
}

.music-item-back-title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* border: 2px red solid; */
    position: absolute;
    top: 0;
    left: 0;
    height: 150px;
    width: 100%;
}

.music-item-back h1 {
    font-weight: 800;
    font-size: 36px;
    padding: 10px 5px;
    /* border: 2px blue solid; */
    top: 30px;
}

.music-item-back h2 {
    font-size: 24px;
    /* border: 2px teal solid; */
    top: 150px;
}

.single .button_stream {
    top: 210px;
}

.project .button_stream {
    top: 200px; 
}

.project .button_info {
    top: 250px; 
}

#loadOverlay {
    display: none;
}


/* @keyframes */

/* header {
    border: 2px black solid;
    margin-top: 30px;
    text-align: center;
}

.header__container {
    display: flex;
    border: 2px green solid;
    width: 100%;
    flex-direction: column;
}

.header__gothreau {
    font-family: 'Courier Prime', monospace;
    font-size: 50px;
    font-weight: 800;
}

.video_player {
    margin: 40px auto;
}

.music_player {
    margin: 20px auto;
} */

